# grade-your-melody

./: .gitignore  CMakeLists.txt  DEVSHOWTOINSTALL.md  README.md  SETUP.md  main.cpp
app/: AspectRatioWidget.cpp  AspectRatioWidget.h  CMakeLists.txt  ClefWidget.cpp  ClefWidget.h  MainWindow.cpp  MainWindow.h  NoteSlot.qml  NoteSlot.qml.autosave  QuizSelectionWidget.cpp  QuizSelectionWidget.h  QuizWidget.cpp  QuizWidget.h  Screen01.qml  StaffAreaWidget.cpp  StaffAreaWidget.h  StaffGeometry.h  StaffWidget.cpp  StaffWidget.h  main.cpp  resources.qrc
app/GradeYourMelodyUI/designer/: plugin.metainfo
app/core/: GridController.cpp  GridController.h
app/soundfonts/: piano.sf2
core/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  GridController.cpp  GridController.h  melody.cpp  melody.h  presenter.cpp  presenter.h  questionBank.cpp  questionBank.h  questionHandler.cpp  questionHandler.h  questions.csv  quizSession.cpp  quizSession.h  quizTypes.h  staffLineGrid.cpp  staffLineGrid.h  staffState.h
docker/: Dockerfile
scripts/: run_gui.sh
tests/: CMakeLists.txt  test_GridController.cpp  test_gridcontroller.cpp  test_melody.cpp  test_questionhandler.cpp  test_staffLineGrid.cpp
